--- a/desafios/desafio.012/watilo/style.css
+++ b/desafios/desafio.012/watilo/style.css
@@ -1,2 +1,66 @@
 @charset "utf-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgrey;
+}
+
+header {
+    background-color: black;
+    color: #fff;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+.normal { 
+    background-color: #fff;
+    color: black;
+}
+
+.imagem {
+    background-color: rgba(51, 51, 51);
+    color: #fff;
+}
+
+.imagem > P {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.253);
+
+}
+
+footer {
+    color: #fff;
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+}
