--- a/desafios/desafio.012/watilo/style.css
+++ b/desafios/desafio.012/watilo/style.css
@@ -1,5 +1,19 @@
 @charset "utf-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root {
+    --font1: verdana, 'geneva', tahoma, sans-serif;
+    --font2: 'passion One', 'cursive';
+    --font3:  'Sriracha', 'cursive';
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +22,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header {
@@ -19,6 +34,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,6 +57,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3vw;
 }
 
 .normal { 
@@ -53,9 +72,9 @@ section {
 }
 
 .imagem > P {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
-
 }
 
 footer {
