--- a/desafios/desafio.012/watilo/style.css
+++ b/desafios/desafio.012/watilo/style.css
@@ -61,6 +61,10 @@ section {
     font-size: 3vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal { 
     background-color: #fff;
     color: black;
@@ -69,13 +73,26 @@ section {
 .imagem {
     background-color: rgba(51, 51, 51);
     color: #fff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.479);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > P {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 }
+
+#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img02 {
+    background-image: url(../imagens/background002.jpg);
+} 
 
 footer {
     color: #fff;
